src/objects/Media_Log__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Area__c</fullName>
        <label>Campaign Area</label>
        <picklist>
            <picklistValues>
                <fullName>Debt Law Reform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Welfare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transgender Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to Justice General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (please specify)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Media Logs</relationshipLabel>
        <relationshipName>Media_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details_Action__c</fullName>
        <label>Details/Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_Outcome__c</fullName>
        <label>Details of Outcome</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Logs</relationshipLabel>
        <relationshipName>Media_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_campaign_area__c</fullName>
        <inlineHelpText>Specify the campaign area if not in the list above</inlineHelpText>
        <label>Other campaign area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_notes__c</fullName>
        <label>Other notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Appearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Briefing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proactive_or_Reactive__c</fullName>
        <label>Proactive or Reactive</label>
        <picklist>
            <picklistValues>
                <fullName>Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specific_Topic__c</fullName>
        <label>Specific Topic</label>
        <type>TextArea</type>
    </fields>
    <label>Media Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ML-{0000}-{MM}-{YYYY}</displayFormat>
        <label>Media Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>